@@ -1,3 +1,8 @@
+2017-02-23  Nik Nyby  <nnyby@columbia.edu>
+
+	* Send an error when attempting to update the extension over HTTP.
+	* Add *.dartmouth.edu to externally connectable whitelist.
+
 2017-02-13  Nik Nyby  <nnyby@columbia.edu>
 
 	* Fixed image collection on blakearchive.org.
